fix: updates labeler

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -1,21 +1,9 @@
-frontend:
-  - 'src/components/**'
-  - '**/*.tsx'
-  - '**/*.jsx'
-
-backend:
-  - 'src/lib/**'
-  - '**/*.ts'
-
-styles:
-  - '**/*.css'
-  - '**/*.scss'
-
-docs:
-  - 'docs/**'
-  - '**/*.md'
-
-config:
-  - '.github/**'
-  - '**/*.yml'
-  - '**/*.yaml'
+# Example configuration for the labeler action
+# Add labels to pull requests based on changed files
+labels:
+  documentation:
+    - '**/*.md'
+  frontend:
+    - 'frontend/**'
+  backend:
+    - 'backend/**'
