chore: update dependencies and add boxing gloves model
- Upgraded Next.js to version 15.3.2
- Added @react-three/drei and @react-three/fiber for 3D rendering
- Included three.js library
- Added TypeScript types for three.js
- Added boxing gloves 3D model to the public/models

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -2,8 +2,8 @@
 # Add labels to pull requests based on changed files
 labels:
   documentation:
-    - '**/*.md'
+    - "**/*.md"
   frontend:
-    - 'frontend/**'
+    - "frontend/**"
   backend:
-    - 'backend/**'
+    - "backend/**"
