--- a/package.json
+++ b/package.json
@@ -10,14 +10,22 @@
     "format": "prettier --write ."
   },
   "dependencies": {
-    "next": "^14.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "@react-three/drei": "^9.122.0",
+    "@react-three/fiber": "^8.18.0",
+    "next": "15.3.2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "three": "^0.160.1"
+  },
+  "overrides": {
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@types/node": "^20.5.9",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.7",
+    "@types/three": "^0.176.0",
     "eslint": "8.55.0",
     "eslint-config-next": "14.1.0",
     "prettier": "^3.5.3",
