--- a/package.json
+++ b/package.json
@@ -10,16 +10,12 @@
     "format": "prettier --write ."
   },
   "dependencies": {
-    "@react-three/drei": "^9.122.0",
-    "@react-three/fiber": "^8.18.0",
+    "@react-three/drei": "^10.0.8",
+    "@react-three/fiber": "^9.0.0-alpha.8",
     "next": "15.3.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "three": "^0.160.1"
-  },
-  "overrides": {
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "three": "^0.176.0"
   },
   "devDependencies": {
     "@types/node": "^20.5.9",
